# curiosity-os

./: Cargo.toml  README.md  todo.txt
src/: commands.rs  interface.rs  main.rs  shell.rs
