[package]
name = "curiosity-os"
version = "0.1.0"
authors = ["Andy Tracy <adtme11@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.29.0"
itertools = "0.14.0"
ratatui = "0.30.0"
ratatui-widgets = "0.3.0"
